refactor: consolidate tenant-based security, multi-tenancy isolation, and cross-cutting authentication logic across the platform.